# global-notes

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html
apps/extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
apps/web/: middleware.ts  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/export/: route.ts
apps/web/app/api/keys/: route.ts
apps/web/app/api/keys/[id]/: route.ts
apps/web/app/api/notes/: route.ts
apps/web/app/api/notes/[id]/: route.ts
apps/web/app/api/projects/: route.ts
apps/web/app/api/share/: route.ts
apps/web/app/api/tags/: route.ts
apps/web/app/api/tags/[name]/: route.ts
apps/web/app/api/tasks/: route.ts
apps/web/app/api/tasks/[id]/: route.ts
apps/web/components/: AiMeta.tsx  ExtractedTasks.tsx  MorningView.tsx  NoteCard.tsx  NoteInput.tsx  NoteList.tsx  RelatedNotes.tsx  SearchBar.tsx  SettingsPanel.tsx  TagFilter.tsx
apps/web/lib/: api-keys.ts  auth.ts  notes.ts  tags.ts
apps/web/lib/ai/: gemini.ts  pipeline.ts  schemas.ts
apps/web/public/: manifest.json  sw.js
db/: schema.sql
db/migrations/: 001_initial.sql  002_ai_columns.sql
docs/: setup.md
