[package]
name = "global-notes-desktop"
version = "0.1.0"
description = "Global Notes desktop — capture from anywhere with a hotkey"
authors = ["Chinmay Jha"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri          = { version = "1", features = ["system-tray", "global-shortcut"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
